# kegel_trainingsplan

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  PLAN.md  README.md  plan.md
assets/: dx-components-theme.css  tailwind.css
assets/styling/: auth.css  main.css  navbar.css
docs/: ui-refactor-plan.md
plans/: sea-orm-integration.md
src/: auth.rs  club_memberships.rs  clubs.rs  dashboard.rs  group_trainers.rs  groups.rs  invitations.rs  main.rs  team_players.rs  teams.rs  theme.rs  training.rs  training_management.rs
src/components/: app_layout.rs  auth.rs  feedback.rs  mod.rs
src/components/ui/: mod.rs
src/components/ui/accordion/: component.rs
src/components/ui/alert_dialog/: component.rs
src/components/ui/avatar/: component.rs
src/components/ui/badge/: component.rs  style.css
src/components/ui/button/: component.rs  style.css
src/components/ui/calendar/: component.rs
src/components/ui/card/: style.css
src/components/ui/checkbox/: component.rs  style.css
src/components/ui/collapsible/: component.rs
src/components/ui/color_picker/: component.rs  style.css
src/components/ui/combobox/: component.rs
src/components/ui/context_menu/: component.rs
src/components/ui/date_picker/: component.rs
src/components/ui/dialog/: component.rs
src/components/ui/drag_and_drop_list/: component.rs
src/components/ui/dropdown_menu/: style.css
src/components/ui/hover_card/: component.rs
src/components/ui/input/: component.rs  style.css
src/components/ui/item/: component.rs  style.css
src/components/ui/label/: component.rs
src/components/ui/menubar/: component.rs
src/components/ui/navbar/: component.rs  style.css
src/components/ui/pagination/: component.rs  style.css
src/components/ui/progress/: component.rs
src/server/: auth.rs  bootstrap.rs  club_memberships.rs  clubs.rs  dashboard.rs  db.rs  group_trainers.rs  groups.rs  invitations.rs  mod.rs  permissions.rs  seed.rs  team_players.rs  teams.rs  training.rs  training_management.rs  training_plan_templates.rs
src/server/entities/: club.rs  club_group.rs  club_membership.rs  group_trainer.rs  invitation.rs  mod.rs  session.rs  team.rs  team_player.rs  training_plan.rs  training_plan_template.rs  training_session.rs  training_template.rs  user.rs
src/views/: club_detail.rs  clubs.rs  dashboard.rs  group_detail.rs  home.rs  login.rs  mod.rs  navbar.rs  register.rs  trainer_area.rs
(+19 files in other folders)
